# project-t

./: .gitignore  constants.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
components/: dashboard.py  login.py  webcam.py
config/: auth.yaml
pages/: admin.py  checkin.py  checkout.py  order.py  rent.py  shopping.py
static/: webcam.js
