[tool.poetry]
name = "project-t"
version = "0.1.0"
description = ""
authors = ["Le Trung Hai <letrunghai.92nl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.40.0"
streamlit-authenticator = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
